--- a/Libro.tex
+++ b/Libro.tex
@@ -3137,9 +3137,6 @@ L'esercito americano utilizza una tecnica, sviluppata da Lloyd Winter, che li ai
 
 Può essere utile fare attività rilassanti una o due ore prima di andare a letto. Si consiglia anche di non utilizzare schermi.
 
-Meglio dormire con qualcuno o da soli? Sembra che chi dormi con il partner riesce a farlo più velocemente, non ha risvegli frequenti durante la notte, né si sveglia troppo presto al mattino, dorme di più e ha un minor rischio di insonnia. Queste sono le conclusioni a cui è giunto Brandon Fuentes
-dell'Università dell'Arizona, inoltre sono stati registrati un minor grado di depressione, ansia e stress e una maggiore soddisfazione della vita in generale. 
-
 Se abbiamo dormito male, secondo uno studio pubblicato sulla rivista Physiology \& Behavior\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/pii/S0031938423003347}}, possono aiutare 20 minuti di movimento per recuperarsi.
 
 Altre cose da evitare sono: Riposini pomeridiani, bevande alcoliche, caffeina, thé, energizzanti o alimenti ricchi di zuccheri, fumo, sport nelle ore che precedono il sonno.
@@ -3505,17 +3502,9 @@ Questo fenomeno si chiama attribuzione erronea dell'arousal, una teoria secondo 
 Chi si somiglia si piglia o gli opposti si attraggono? Secondo alcuni studi sembra che chi si somiglia si piglia\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/abs/pii/S109051382300051X}} \endnote{\raggedright\url{https://www.theguardian.com/science/2023/sep/04/opposites-dont-attract-couples-more-likely-to-be-similar-than-different-study-shows}}.
 \end{mdframed}
 
-
-
-
-
 Sebbene oggi l’anello di fidanzamento sia considerato un gesto quasi obbligatorio, la sua diffusione capillare è in gran parte dovuta a campagne pubblicitarie sviluppate nel corso del Novecento, in particolare a partire dagli anni ’30. Il
 cinema, la musica e i media, in pochi decenni, sono riusciti a costruire tutta una serie di significati e di norme che
-definissero come deve essere una coppia per essere felice. Uno degli aspetti fuorvianti principali di queste forme di
-comunicazione è il fatto che la storia non ci fa vedere cosa succede dopo il lieto fine e, ci sta, perché stiamo
-parlando di film o di canzoni, non di manuali di vita e, vanno quindi presi per quello che sono. Il problema non è
-quindi dei film o delle canzoni, ma di come li guardiamo. Non possiamo smettere di avere aspettative, ma possiamo
-diventare più consapevoli da dove arrivano.
+definissero come deve essere una coppia per essere felice.
 
 Secondo Giorgio Nardone come scrive in Gli errori delle donne (in amore)\endnote{\raggedright\url{https://www.amazon.it/dp/8833311198/}}: le persone
 che stanno assieme per tutta la vita hanno la caratteristica di continuare a corteggiarsi nel tempo, come se fossero
@@ -3523,200 +3512,50 @@ sempre nella fase iniziale della loro relazione. John Gottman dice che se non fa
 matrimonio e non fai nulla per peggiorarlo, allora tenderà a peggiorare.
 In "la versione di barney" si dice che l'amore è quotidianità, al contrario di come ama il giovane Werther e spesso anche noi, che cerchiamo sempre qualcosa di più della normalità.
 
-Possiamo credere di aver un buon carattere e che sia facile convivere con noi, ma la verità è che siamo tutti
-complicati, tutti strani ed è difficile convivere con chiunque. In amore ci basiamo molto di più sull'impulso e
-sull'istinto piuttosto che sul pensiero. Questo è il romanticismo, credere che amare non sia un abilità, ma venga da se,
-senza un impegno, altrimenti non è amore vero.
-
-La prima esperienza di amore che sperimentiamo, è quella dei genitori. Loro ci danno amore, cure, attenzioni senza
-volere nulla in cambio, inoltre cercano di capire i nostri bisogni e i nostri desideri senza che noi li diciamo. Da
-adulti cerchiamo la stessa cosa, ma siamo diventati molto più complicati del bambino che eravamo e, pretendiamo che
-gli altri ci arrivino da soli a capirci e che si comportino in un certo modo se ci amano veramente. Nessuno di noi è
-perfetto, ma spesso cerchiamo la perfezione negli altri\endnote{\raggedright\url{https://youtu.be/-EvvPZFdjyk}}. Amore romantico (ti amerò per sempre) e amore convergente (ti scelgo ogni giorno).
-
-Un esempio di conversazione di una coppia sposata da anni riportato da John Gottman: "Ehi, guarda
-quella barca", la moglie alza gli occhi dalla rivista e risponde: "Già,
-assomiglia a quel grande yacht che abbiamo visto l'altra estate, ricordi?" e
-il marito borbotta qualcosa. Questa non sembra la conversazione di una coppia che funziona, invece, i partner che si
-impegnano in futilità di questo genere, hanno buone probabilità che il loro matrimonio sarà felice.
 Hollywood ha distorto il concetto di romanticismo costringendolo solo alle emozioni che fanno ardere la passione. Nella
 vita reale è alimentato da un approccio molto più normale, quello di rimanere più semplicemente in contatto. 
 
-Da un esperimento ideato dallo psicologo Arthur Aron nel 1997, sono state ideate le 36 domande per innamorarsi, con l'obiettivo di creare intimità tra due persone e aiutare a conoscersi meglio e sviluppare una connessione emotiva significativa. 
-
-1. Se potessi scegliere tra qualsiasi persona al mondo, chi inviteresti a cena?
-2. Vorresti essere famoso? Come?
-3. Prima di fare una telefonata, fai le prove di quello che dirai?
-4. Definisci qual è «Il giorno perfetto» per te?
-5. Qual è l’ultima volta che hai cantato da solo? E per qualcun altro?
-6. Se potessi vivere fino a 90 anni e per gli ultimi 60 anni avere o il corpo o la mente di un trentenne, quale dei due sceglieresti?
-7. Pensi mai al modo in cui morirai?
-8. Tre cose che tu e il tuo partner avete in comune.
-9. Qual è la cosa nella tua vita di cui sei più grato?
-10. Se potessi cambiare qualcosa nel modo in cui sei stato allevato, quale sarebbe?
-11. Racconta la storia della tua vita al tuo partner in 4 minuti nel modo più dettagliato possibile.
-12. Se potessi svegliarti domani con una particolare qualità, quale sceglieresti?
-13. Se una palla di cristallo potesse dirti la verità su te stesso, sulla tua vita o sul futuro o su qualsiasi altra cosa, che sceglieresti?
-14. C’è qualcosa che hai a lungo sognato di fare? Perché non l’hai fatta?
-15. Qual è il più gran risultato della tua vita?
-16. Per te cosa conta di più in un’amicizia?
-17. Qual è il tuo ricordo più caro?
-18. E il più terribile?
-19. Se sapessi che nel giro di un anno morirai cosa cambieresti nella tua vita?
-20. Cosa significa l’amicizia per te?
-21. Che ruolo gioca l’amore nella tua vita?
-22. Condividi con il tuo partner almeno cinque qualità positive reciproche.
-23. Quanto è stata affettuosa la tua famiglia? Ritieni che la tua infanzia sia stata in media più felice delle altre?
-24. Che rapporto hai con tua madre?
-25. Tu e il tuo partner fate tre affermazioni vere con il «noi». Per esempio: «Siamo entrambi in questa stanza e sentiamo…».
-26. Completa questa frase: «Vorrei aver avuto qualcuno con cui condividere…»
-27. Se tu diventassi amico del tuo partner quale segreto dovrebbe sapere di te?
-28. Dì al partner cosa ti piace di lui.
-29. Dividi con il partner un momento imbarazzante nella tua vita.
-30. Quand’è stata l’ultima volta che hai pianto davanti a qualcuno? E da solo?
-31. Sottolinea al tuo partner qualcosa che ti piace particolarmente di lui.
-32. Che cosa è troppo serio per scherzarci su?
-33. Se tu dovessi morire questa sera, qual è la cosa che rimpiangi di più di non aver detto a qualcuno?
-34. La tua casa brucia, hai tempo per salvare solo un oggetto, cosa sceglieresti e perché?
-35. Fra tutte le persone della tua famiglia, la morte di chi ti colpirebbe di più?
-36. Condividi un problema personale con il tuo partner e chiedigli aiuto per risolverlo.
-
-\begin{mdframed}[linewidth=1pt]
-Cultura della principessa
-
-Lo studio di Koontz et al. (2017)\endnote{\raggedright\url{https://journals.sagepub.com/doi/full/10.1177/0265407517735694}} ha esaminato
-come le giovani donne percepiscono le rappresentazioni dei media delle principesse e dell'idea che
-si costruiscono sulla vita di coppia. I ricercatori esprimono la preoccupazione che le favole possano spingere le
-ragazze a cercare relazioni romantiche basate su beni mercificati e/o su un “principe azzurro” che si prenda cura di
-loro. I film come quelli Disney hanno contribuito a mantenere in piedi diverse idee, come: Si può essere “per sempre
-felici” trovando un compagno e, che la relazione andrà bene perché c'è stato
-l'amore a priva vista, e anche, delle differenze di potere che favoriscono gli uomini sulle donne.
-Così, le rappresentazioni mediatiche idealizzate dell'amore potrebbero perpetuare complicazioni
-tra aspettative ed esperienze vissute. Lo studio però, osserva anche che le donne si stanno distaccando da questo
-immaginario\endnote{\raggedright\url{https://www.stateofmind.it/2021/11/cultura-principessa-amore/}}.
-\end{mdframed}
-
-La psichiatra tedesca Adelheid Kastner che dirige il dipartimento psichiatrico della Kelper University Clinic di Linz,
+La psichiatra tedesca Adelheid Kastner del dipartimento psichiatrico della Kelper University Clinic di Linz,
 ha osservato essere più semplice staccarsi dal partner che dai propri ideali romantici, dalle proprie fantasie, definizioni
 e aspettative. In molti casi potrebbe non essere sbagliato il nostro partner, ma solo quello che secondo noi dovrebbe
-esserci in una relazione (anche di amicizia). Viviamo in un mondo in cui anche le
-amicizie del cuore sono romanticizzate senza misura dai media, il che può farti sentire inadeguato se per qualsiasi
-ragione non riesci a costruire una rete simile nella tua vita. 
+esserci in una relazione (anche di amicizia). 
 
-Ci sono solo due tipologie di coppie al mondo: quelle che litigano e quelle che non conosci molto bene (Russ Harris)
-
-Siamo abituati a buttare via le cose quando non funzionano più e comprarne delle nuove invece di aggiustarle. Allo
-stesso modo, talvolta, facciamo con le relazioni. Pensiamo che fare sempre la stessa cosa sia noioso e appena qualcosa si
-affievolisce ricerchiamo quell'entusiasmo iniziale con una nuova relazione. Questo bias di
-generalizzazione, anche in questo caso porta a un errore e, di esempi ne abbiamo tanti, ad esempio con le nostre
-passioni che anche a distanza di anni ci emozionano e ci appagano ancora. I consigli di Adelheid sono: non imbarcatevi
-in una relazione perché volete sperimentare qualcosa di emotivamente nuovo. E rompete il meno possibile per esercitarsi
-e provare a far funzionare le cose e per non farlo diventare
-un'abitudine\endnote{\raggedright\url{https://www.vice.com/it/article/bnwwnz/perch-la-tua-prossima-relazione-non-sar-meglio-di-questa}}.
-
-Quindi possiamo vivere male il rapporto di coppia per le aspettative e le definizioni che diamo a questo status, ma è
-possibile vivere male anche la condizione di single, per le stesse ragioni.
-
-\begin{mdframed}[linewidth=1pt]
-Meglio dormire assieme o separati? 
-
-Secondo alcuni studi dormendo con un altra persona interferiamo con il sonno e viceversa. Questi
-disturbi involontari che possono andare dal cambiare posizione o andare in bagno fino al fare rumori con la bocca,
-possono causare frequenti risvegli, che seppur brevi in alcuni casi, influenzano comunque sulla qualità del sonno rendono
-stanchi e più irritabili con il partner il giorno seguente. Inoltre, dormire separati ci aiuta a dar meno per scontato
-il contatto fisico con il partner che ne fa aumentare il desiderio. Secondo la ricerca una coppia su 4 decide di non
-dormire nello stesso letto.
-
-Secondo uno studio del 2022 riportato da ScienceDaily, su oltre mille adulti, dormire insieme è associato a minori sintomi di insonnia, affaticamento, depressione e ridotto e tempi di addormentamento più rapidi; si è riscontrata anche una minore incidenza di disturbi respiratori notturni nel campione. La vicinanza fisica favorisce anche la produzione di ossitocina, l'“ormone dell'amore” un neuropeptide associato a riduzione dello stress e miglioramento del tono dell’umore. Questo effetto si verifica anche con un animale domestico accanto.
-
-Mentre invece, secondo uno studio dell'Università dell'Arizona pubblicato sulla rivista scientifica
-Sleep\endnote{\raggedright\url{https://academic.oup.com/sleep/article/45/Supplement\_1/A4/6592562}}, dice il contrario, chi
-dorme con il proprio partner riferisce meno episodi di insonnia, meno affaticamento, ci si addormenta prima, meno apnee
-notturne, minori probabilità di stress, depressione, ansia, maggiore soddisfazione personale e relazionale e a una più
-solida rete di supporto sociale sulla quale poter contare. 
-
-Insomma, per ognuno è diverso. Mentre dormire con i figli peggiora la qualità del sonno in quanto più fragile e porta a frequenti risvegli.
-\end{mdframed}
+Ci sono solo due tipologie di coppie al mondo: quelle che litigano e quelle che non conosci molto bene - Russ Harris
 
 \subsubsection{Single o coppia o poliamore?}
-Secondo uno studio longitudinale su oltre 24.000 persone in Germania ha rilevato che il matrimonio generalmente porta solo un piccolo e temporaneo aumento della felicità, con i livelli di soddisfazione che tendono a ritornare alla normalità dopo l'iniziale entusiasmo. Avere una buona rete relazionale da coltivare anche durante il matrimonio e che resterà anche nel caso di divorzio impatta maggiormente sul nostro benessere complessivo\endnote{\raggedright\url{https://www.apa.org/news/press/releases/2003/03/married-happy}}.
 
-L'ideale sarebbe essere a proprio agio sia da soli che in relazione, cercare di essere il più indipendenti possibili, senza perdere le tue passioni e le tue amicizie che comporterebbe una perdita identitaria di ciò che sei. 
-Secondo Raffaele Morelli, si capisce di essere nella giusta relazione quanto
-l'altro non è più indispensabile, ma diventa un compagno di
-viaggio\endnote{\raggedright\url{https://youtu.be/hjvw31kY4Dw}}. Se abuso con l'alcol, sostanze stupefacenti o
-gioco d'azzardo, si dice che ho una dipendenza, se invece dipendo da qualcuno, la nostra società ci ha abituato a chiamare questa dipendenza con i sentimenti più alti, come amore. Resta una dipendenza e come tale ci renderà difficile vivere una vita equilibrata. 
-Tuttavia, l’attaccamento emotivo in sé non è patologico, è una componente sana dell’amore e della connessione umana, purché non comprometta l’autonomia individuale.
-Frasi come: senza di te io muoio, ti faranno comportare in modo esagerato o claustrofobico. Se sto bene da solo e decido di trovare una
-compagna/o, sarà una scelta, non un bisogno e, probabilmente, non utilizzerò strategie comunicative che
-all'apparenza costringano il mio partner a stare con me, come i ricatti emotivi e non, comunicazione violenta o ossessiva.
+L'ideale sarebbe essere a proprio agio sia da soli che in relazione, cercare di essere il più indipendenti possibili, senza perdere le tue passioni e le tue amicizie e conseguente perdita identitaria. 
+Secondo Raffaele Morelli, si capisce di essere nella giusta relazione quando l'altro non è più indispensabile, ma diventa un compagno di viaggio\endnote{\raggedright\url{https://youtu.be/hjvw31kY4Dw}}. Se abuso con l'alcol, sostanze stupefacenti o gioco d'azzardo, si dice che ho una dipendenza, se invece dipendo da qualcuno, socialmente chiamiamo questo con i sentimenti più alti, come amore.
+Tuttavia, l’attaccamento emotivo in sé non è patologico, è una componente sana della connessione umana, purché non comprometta l’autonomia individuale.
+Frasi come: senza di te io muoio, ti faranno comportare in modo esagerato o claustrofobico. Se sto bene da solo e decido di trovare una compagna/o, sarà una scelta, non un bisogno e, probabilmente, non utilizzerò strategie comunicative che costringano il mio partner a stare con me, come i ricatti emotivi e non, comunicazione violenta o ossessiva.
 
-Secondo Giorgio Nardone la coppia trova il suo equilibrio fra intimità e distacco, indipendenza, autonomia e condivisione,
-legame. Quando una relazione è sbilanciata si potrebbe avere da una parte freddo distacco e, dall'altra
-coinvolgimento morboso. Una coppia equilibrata alterna un armoniosa complementarietà tra i momenti di piena
-condivisione, e simmetria, quelli nei quali ognuno dei due agisce in piena indipendenza. 
+Secondo Giorgio Nardone la coppia trova il suo equilibrio fra intimità e distacco, indipendenza e condivisione. Quando una relazione è sbilanciata si potrebbe avere da una parte freddo distacco e, dall'altra coinvolgimento morboso.
 
-\begin{mdframed}[linewidth=1pt]
-Curiosità sulla vita da single e in coppia
+Nel mondo animale, soprattutto tra i mammiferi e le scimmie antropomorfe, ovvero, quelle più simili all'uomo, è diffusa la regola dell'harem. Nell'harem i
+maschi lottano tra loro e quello più forte, diventa il capo, ottenendo il diritto di accoppiarsi con tutte le femmine. Tra gli esseri umani che non hanno istinti così invalicabili, è la cultura a dirci come fare. Per i cristiani c'è la monogamia, tra i mussulmani e i mormoni la poligamia. Come facciamo a sapere cosa migliora il nostro benessere? Nel mondo animale, la monogamia è più frequente negli uccelli che nei mammiferi, quindi come mai l'uomo ha sviluppato questa peculiarità? Probabilmente per lo stesso motivo: perché da soli faticherebbero a crescere la prole. Le uova infatti hanno bisogno di essere costantemente scaldate, così, mamma uccello morirebbe di fame se non ci fosse papà uccello a darle il cambio e, viceversa. Nei mammiferi i cuccioli, solitamente, dopo poche ore riescono già a camminare da soli, mentre, gli esseri umani ci mettono un anno, diventando totalizzanti in termini di tempo richiesto alle madri. 
 
-Numerosi studi osservano che le persone sposate hanno un minore rischio di sviluppare malattie cardiovascolari, diabete
-e problemi respiratori (soprattutto per gli uomini).
+Come mai gli esseri umani, rispetto alle altre scimmie, ci mettono così tanto a diventare sufficientemente autonomi? Il primo grande passo evolutivo che ci ha staccato dalle scimmie è l'aver iniziato a camminare in modo eretto, da qui, a cascata, si sono sbloccate una serie di caratteristiche. 
+Ad esempio, il camminare in piedi ha permesso di poter utilizzare delle armi, le quali, gli hanno permesso di andare a caccia. Per far fronte a un ambiente complesso e competitivo, i nostri antenati hanno sviluppato strategie cognitive più raffinate. Questa crescente complessità sociale e ambientale ha contribuito allo sviluppo di un cervello più grande. Un grande cervello comporta un grande cranio e quest'ultimo, passando dal bacino della donna durante il parto, avrebbe dovuto portare alla selezione di fianchi più larghi. Un bacino più largo, però, avrebbe compromesso la capacità di camminare su due zampe,
+così l'evoluzione ha selezionato il miglior compromesso che ha trovato, ovvero, facendo nascere i cuccioli con le ossa del cranio non ancora fissate tra loro, in modo da potersi schiacciare durante il parto. Anche per questo motivo il parto è così doloroso per le femmine della specie umana rispetto ad altri animali.
 
-Di contro le persone sposate in una relazione frustrante che non li appaga hanno un maggiore rischio di sviluppare
-malattie cardiovascolari, diabete e problemi respiratori.
+Così, il nostro cervello di grandi dimensioni, fa nascere figli prematuri, bisognosi di molte cure e, la madre necessita dell'aiuto del padre e viceversa. Questo è un motivo per cui la monogamia è stata vantaggiosa nella nostra specie.
 
-Alcune ricerche suggeriscono che le persone single tendono a mantenere una rete sociale più ampia rispetto a quelle sposate, anche se ciò può variare molto in base a fattori culturali ed età. Dal punto di vista economico, le coppie possono beneficiare di economie di scala, ma questo non implica necessariamente una maggiore soddisfazione personale.
-
-Alcune ricerche, come quella condotta dalla Open University\endnote{\raggedright\url{http://www.open.ac.uk/choose/change/?KWCAMPAIGN=RAPP\_BAU\_England\_-\_Brand\_Exact\&keywordid=ggluk\_open\_university\&mkwid=sr8DYsIV3\_dc\%7Cpcrid\%7C34082700022\&gclid=CIfiyLm8-7sCFYFe3godJT0AXg}}, osservano che le coppie senza figli possono avere più tempo per dedicarsi agli interessi comuni, con benefici per la relazione. Tuttavia, la presenza di figli può contribuire al benessere in modo diverso, offrendo senso e gratificazione personale, specialmente per chi desidera la genitorialità. Al contempo diversi studi mostrano che la maternità può essere fonte di gratificazione profonda per molte donne, anche se comporta alti livelli di stress e carico mentale. Gli effetti della genitorialità sulla soddisfazione personale e relazionale variano molto da persona a persona e sono influenzati da fattori culturali, economici e relazionali.
-\end{mdframed}
-
-Se guardiamo al mondo animale, tra i mammiferi e soprattutto tra le scimmie antropomorfe, ovvero, quelle più simili
-all'uomo, è diffusa la regola dell'harem. Nell'harem i
-maschi lottano tra loro e quello più forte ne diventa il capo, ottenendo il diritto di accoppiarsi con tutte le femmine
-del branco. Tra gli esseri umani che non hanno istinti così invalicabili, è la cultura a dirci come fare. Ad
-esempio nella cultura cristiana c'è la monogamia e tra i mussulmani e i mormoni c'è la poligamia. Quindi come facciamo a sapere
-cosa è giusto fare? Non esiste un giusto e uno sbagliato, ma, tornando all'evoluzione
-della monogamia ci sono diverse teorie. Notiamo che nel mondo animale, la monogamia è presente più negli uccelli che
-nei mammiferi, quindi come mai l'uomo ha sviluppato questa peculiarità? Probabilmente per lo
-stesso motivo: perché da soli non riuscirebbero a crescere la prole. Le uova infatti hanno bisogno di essere costantemente scaldate, quindi
-mamma uccello morirebbe di fame se non ci fosse papà uccello a darle il cambio e, viceversa. Uso mamma e papà per semplificare,
-infatti in alcune specie, come i pinguini, sono principalmente i maschi a covare le uova. Nei mammiferi i cuccioli,
-dopo poche ore riescono già a camminare da soli, mentre gli esseri umani ci mettono un anno, diventando totalizzanti in
-termini di tempo richiesto alle madri. Come mai gli esseri umani, rispetto alle altre scimmie, ci mettono così tanto
-a diventare sufficientemente autonomi? Il primo grande passo evolutivo che ci ha staccato dalle scimmie è
-l'aver iniziato a camminare in modo eretto, da qui, a cascata, si sono sbloccate una serie di
-caratteristiche. 
-
-Ad esempio, il camminare in piedi ha permesso di poter utilizzare delle armi, le quali, gli hanno permesso di andare a
-caccia. Per far fronte a un ambiente complesso e competitivo, i nostri antenati hanno sviluppato strategie cognitive più raffinate. Questa crescente complessità sociale e ambientale ha contribuito allo sviluppo di un cervello più grande
-Un grande cervello comporta un grande cranio e quest'ultimo,
-passando dal bacino della donna durante il parto, avrebbe dovuto portare all'evoluzione di fianchi
-più larghi, ma questo non è successo. Un bacino più largo avrebbe compromesso la capacità di camminare su due zampe,
-così l'evoluzione ha selezionato il miglior compromesso che ha trovato, ovvero, facendo nascere
-i cuccioli con le ossa del cranio non ancora fissate tra loro, in modo da potersi schiacciare durante il parto. Anche
-per questo motivo il parto è così doloroso per le femmine della specie umana rispetto agli altri animali. 
-
-Quindi, il nostro cervello di grandi dimensioni, fa nascere figli prematuri che necessitano di molte cure, portando via
-molto tempo alla madre che necessita dell'aiuto del maschio. Questo è un motivo per cui la monogamia è stata vantaggiosa nella nostra evoluzione.
-
-Tanti animali, come i mammiferi, hanno un periodo in cui tanto tempo ed energie della madre, dipendono dal figlio, per esempio perché deve
-allattare. Di conseguenza potrebbe evitare altri rapporti sessuali per non rischiare di non avere le risorse per portare avanti una nuova gravidanza. In alcune specie con strutture sociali simili all’harem, il nuovo maschio dominante può commettere infanticidio, una strategia che accelera la ripresa dell’estro nelle femmine e aumenta le sue opportunità riproduttive. Per massimizzare
-la continuazione del proprio patrimonio genetico si sono sviluppate diverse strategie, per questo, negli harem è molto
-frequente l'infanticidio. Il nuovo capobranco, che si trova con una serie di femmine che non
-possono riprodursi per via dei loro cuccioli, decide di uccidere questi ultimi, in modo da renderle nuovamente
-disponibili all'accoppiamento. Secondo alcune teorie, la monogamia potrebbe essersi evoluta anche come strategia per aumentare le probabilità di successo riproduttivo, ad esempio assicurando maggiori cure parentali e riducendo il rischio di infanticidio. I due metodi
-hanno pro e contro. Nell'harem si hanno più femmine quindi più prole, ma se subentra un nuovo
-maschio ci si potrebbe ritrovare con niente. Nella monogamia si ha meno prole, ma con una possibilità maggiore che arrivi
-all'età fertile, inoltre il maschio potrebbe essere più partecipe alla crescita del figlio. Uno studio su
-Science di Tim Clutton-Brock e Dieter Lukas\endnote{\raggedright\url{http://www.sciencemag.org/site/extra/monogamy/}} invece ipotizza
-che la monogamia sia nata in quelle specie dove le femmine sono piuttosto disperse e i maschi non possono raggiungerne
-più di una in una sola volta. Un altro studio invece, pubblicato sulla rivista Nature Communications, grazie a un
+Attorno a questo tema, c'è molta speculazione. Uno studio su Science di Tim Clutton-Brock e Dieter Lukas\endnote{\raggedright\url{http://www.sciencemag.org/site/extra/monogamy/}} invece ipotizzano che la monogamia sia nata in quelle specie dove le femmine sono piuttosto disperse e i maschi non possono raggiungerne più di una in una sola volta. Un altro studio invece, pubblicato sulla rivista Nature Communications, grazie a un
 gruppo di ricercatori dell'università canadese di Waterloo sotto la direzione di Chris Bauch
 spiega che la monogamia si sia sviluppata per ridurre il rischio di contrarre malattie sessualmente
 trasmissibili\endnote{\raggedright\url{https://www.nature.com/articles/ncomms11219}}. Un altro studio osserva come la monogamia sia
 nata dai maschi di basso rango, con basse probabilità di accoppiamento perché non abbastanza forti per competere con i
 maschi di alto rango che monopolizzavano le femmine. I maschi di basso rango approvvigionavano le femmine, dandogli da
 mangiare e, queste ultime in cambio gli donavano la fedeltà\endnote{\raggedright\url{https://www.pnas.org/doi/10.1073/pnas.1200717109}}.
+
+
+
+
+
+
+
+
+
 
 Oltre ai vantaggi evolutivi dello stare in coppia, troviamo anche delle questioni pratiche, soprattutto legate alla
 crescita della prole, che risulterebbe più complicata dal punto di vista logistico in una coppia aperta. 
