--- a/Libro.tex
+++ b/Libro.tex
@@ -3664,7 +3664,7 @@ che proviamo. Se analizziamo e riempiamo di giudizi i nostri sentimenti, rischia
 farlo durare se vogliamo che duri, questo potrebbe farci comportare in maniera esagerata, allontanado l'altra persona.
 Non pretendere di innamorarti “come una volta”. Non esiste amore con la “a” maiuscola o minuscola. Abbiamo una lista
 delle caratteristiche che deve avere l'amore per essere con la “a” maiuscola:
-l'età, interessi, hobby, aspirazioni, status, se vuole figli ecc…. Ma come spesso accade, arriva poi la realtà a dirci che ci sbagliavamo, quindi megio vivere le esperienze per ciò che sono, fin da subito.
+l'età, interessi, hobby, aspirazioni, status, se vuole figli ecc…. Come spesso accade però, arriva poi la realtà a dirci che ci sbagliavamo, quindi megio vivere le esperienze per ciò che sono, fin da subito.
 
 Alcune persone lamentano di non riuscire a trovare storie serie, attribuendo la causa alla mancanza di impegno altrui. Tuttavia, talvolta, queste stesse persone possono essere attratte da dinamiche relazionali meno impegnative. In questo scenario, a causa di giudizi culturali negativi verso tali scelte, può svilupparsi una narrazione che attribuisce le difficoltà a fattori esterni, anziché riconoscere i propri bisogni o schemi inconsci.
 
